edge/k8s/cache-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-controller
  template:
    metadata:
      labels:
        app: cache-controller
    spec:
      containers:
        - name: cache-controller
          image: hasaan12/ds-cache-controller:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: cache-controller
spec:
  selector:
    app: cache-controller
  ports:
    - port: 5001
      targetPort: 5001
