edge/k8s/streaming-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-controller
  labels:
    app: streaming-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming-controller
  template:
    metadata:
      labels:
        app: streaming-controller
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: streaming-controller
          image: hasaan12/ds-streaming-controller:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: hls-storage
              mountPath: /tmp/hls_videos
      volumes:
        - name: hls-storage
          persistentVolumeClaim:
            claimName: hls-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: streaming-controller
spec:
  selector:
    app: streaming-controller
  ports:
    - port: 8054
      targetPort: 8000
